fix: añadido wrap a filtro para diseño responsivo

--- a/scss/components/_filters.scss
+++ b/scss/components/_filters.scss
@@ -2,6 +2,7 @@
 
 .filters-list {
     display: flex;
+    flex-wrap: wrap;
     gap: 0.7rem;
 }
 
